<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color_bg"
    tools:context=".detail_tvshow.DetailShowActivity">

    <include
        android:id="@+id/toolbar_detail"
        layout="@layout/toolbar_detail" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/showAvatar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_android_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_detail" />

    <TextView
        android:id="@+id/tv_show_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/josefinsans_semibold"
        android:text="@string/title"
        android:textColor="@color/text"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/showAvatar"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_detail" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/josefinsana_regular"
        android:text="@string/author"
        android:textColor="@color/text"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/showAvatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_show_title" />

    <ImageView
        android:id="@+id/img_trailer"
        android:layout_width="320dp"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        android:src="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/author" />

    <ImageView
        android:id="@+id/play_button"
        android:clickable="true"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_play"
        app:layout_constraintEnd_toEndOf="@+id/img_trailer"
        app:layout_constraintStart_toStartOf="@+id/img_trailer"
        app:layout_constraintTop_toTopOf="@+id/img_trailer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/josefinsana_regular"
        android:text="@string/watch_trailer"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/img_trailer"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/img_trailer"
        app:layout_constraintTop_toBottomOf="@+id/play_button" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/josefinsans_semibold"
        android:text="@string/overview"
        android:textColor="@color/text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_trailer" />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_star"
        app:layout_constraintEnd_toStartOf="@+id/stars_detail"
        app:layout_constraintTop_toBottomOf="@+id/img_trailer" />

    <TextView
        android:id="@+id/stars_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/josefinsana_regular"
        android:text="@string/dummy_stars"
        android:textColor="@color/text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_trailer" />

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/josefinsana_regular"
        android:text="@string/dummy_overview"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/josefinsans_semibold"
        android:text="@string/cast"
        android:textColor="@color/text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

    <ListView
        android:id="@+id/lv_cast"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>